--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,11 @@
-<h1> OHOOH WACK </h1>
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>GREAT</title>
+  </head>
+  <body>
+<centre>
+  <h1>I AM IN THE CENTRE.</h1>
+    </centre>
+  </body>
+  </htmL>
