--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,8 @@
     <title>GREAT</title>
   </head>
   <body>
-<centre>
-  <h1>I AM IN THE CENTRE.</h1>
-    </centre>
+<center>
+  <h1>Welcome to GREAT</h1>
+    </center>
   </body>
-  </htmL>
+  </html>
