--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,9 @@
   <body>
 <center>
   <h1>Welcome to GREAT</h1>
+  <marquee>
   <p>Doing random stuff since 2017</p>
+  </marquee>
     </center>
   </body>
   </html>
