--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 <center>
   <h1>Welcome to GREAT</h1>
   <marquee>
-  <p>Doing random stuff since 2017</p>
+    <p>Doing random stuff since 2017 | Owned by DaEliteGoat on Github | ded</P>
   </marquee>
     </center>
   </body>
