--- a/index.htm
+++ b/index.htm
@@ -10,5 +10,6 @@
     <p>Doing random stuff since 2017 | Owned by DaEliteGoat on Github | ded</P>
   </marquee>
     </center>
+   <p>GREAT is a project, 'nuf said.</p>
   </body>
   </html>
