--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
   <head>
     <title>GREAT</title>
   </head>
-  <body>
+  <body style="font-family:Arial>
 <center>
   <h1>Welcome to GREAT</h1>
   <marquee>
@@ -11,5 +11,6 @@
   </marquee>
     </center>
    <p>GREAT is a project, 'nuf said.</p>
+               <small>tagged by ed. yolo brov</small>
   </body>
   </html>
