--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
   <head>
     <title>GREAT</title>
   </head>
-  <body style="font-family:Arial>
+  <body style="font-family:Arial">
 <center>
   <h1>Welcome to GREAT</h1>
   <marquee>
