--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
     <p>Doing random stuff since 2017 | Owned by DaEliteGoat on Github | ded</P>
   </marquee>
     </center>
-   <p>GREAT is a project, 'nuf said.</p>
-               <small>tagged by ed. yolo brov</small>
+   <p>GREAT is a project started to experiment and things like that. Yeah.</p>
+               <small>Tagd bi th mjrly stpd edddd.</small>
   </body>
   </html>
