--- a/index.htm
+++ b/index.htm
@@ -12,5 +12,9 @@
     </center>
    <p>GREAT is a project started to experiment and things like that. Yeah.</p>
                <small>Tagd bi th mjrly stpd edddd.</small>
+  <center>
+    <h1>NEW THEORY: THE MAN BEHIND EDXTECH IS A FURRY</h1>
+          <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/187107821/?autostart=false" frameborder="0" allowfullscreen></iframe>    
+  </center>
   </body>
   </html>
